--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.7.0",
+    "framer-motion": "^5.5.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-moralis": "^0.3.8"
+    "react-moralis": "^0.3.8",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
